deployment/k8s/brix/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brix
  labels:
    app: brix-pizza
    environment: production
