deployment/k8s/brix/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brix-pizza
  namespace: brix
  labels:
    app: brix-pizza
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: brix-pizza
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
