deployment/k8s/brix/07a-service-loadbalancer.yaml
# LoadBalancer Service Example
# This is an alternative to the Route for non-OpenShift Kubernetes clusters
# Use this on cloud providers (AWS, GCP, Azure) that support LoadBalancer type services
#
# To use this instead of the Route:
# kubectl apply -f service-loadbalancer.yaml

apiVersion: v1
kind: Service
metadata:
  name: brix-pizza-lb
  namespace: brix
  labels:
    app: brix-pizza
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: brix-pizza
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
