deployment/k8s/brix/09-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: brix-pizza-nodeport
  namespace: brix
  labels:
    app: brix-pizza
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
    # NodePort will be auto-assigned in range 30000-32767
    # Or specify manually: nodePort: 30080
  selector:
    app: brix-pizza
